Wed Jan 10 01:13:54 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch], daemon/slave.c, gui/gdmlogin.c,
	  config/gdm.conf.in:  Move the background stuff to greeter as that
	  makes more sense

	* daemon/gdm.[ch], daemon/slave.c: Add automatic logging in on the
	  first login (so most likely right after boot).  This is off by
	  default of course and will not autologin root.

Tue Jan 09 21:55:26 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch], daemon/slave.c, config/gdm.conf.in:  Add support
	  for running a background process and have it have the same lifetime
	  as the greeter.  This makes it easy to add things like screensavers
	  on the root and make them stop when you actually log in.

Tue Jan 09 18:50:51 2001  George Lebl <jirka@5z.com>

	* Many changes, too many to write a changelog for.  Applied most of
	  the redhat and helix patches.  On the login screen make a window
	  over the entire window and proxy key events back to the entry to
	  get xdm like keyboard grab behaviour without a grab.  When starting
	  local displays call gdm_display_manage to actually fork the slave.
	  Try cleaning up after self when messing with signal handlers.
	  When killing clients, ignore x errors.  Kill clients on the same
	  display connection since opening a new one won't work.  Kill the
	  alarm on the ping since it made no sense, and didn't work in the
	  first place.

2000-12-17  Marius Andreiana  <mandreiana@yahoo.com>

	* configure.in: Added ro (Romanian) to ALL_LINGUAS

2000-12-12  Mathieu Lacage  <mathieu@eazel.com>

	Make it: 1) compile 2) pass make distcheck.
	* configure.in: one BAD BAD typo: s/aC/AC/
	* daemon/Makefile.am: add server.h
	* docs/C/Makefile.am: remove images.
	* docs/C/gdm.sgml: fix sgml.
	* po/Makefile.in.in: I dunno.

2000-11-28 Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>

	* configure.in (ALL_LINGUAS): Added Slovak translation

2000-10-19  Yukihiro Nakai  <nakai@gnome.gr.jp>
