@@ -35,7 +35,7 @@ extern gboolean GdmVerboseAuth;
 extern gboolean GdmAllowRoot;
 
 /* Local PAM handle */
-pam_handle_t *pamh;
+pam_handle_t *pamh = NULL;
 
 
 /* Internal PAM conversation function. Interfaces between the PAM
@@ -50,7 +50,7 @@ gdm_verify_pam_conv (int num_msg, const struct pam_message **msg,
     gchar *s;
     struct pam_response *reply = NULL;
     
-    reply = g_new0 (struct pam_response, num_msg);
+    reply = malloc (sizeof (struct pam_response) * num_msg);
     
     if (!reply) 
 	return PAM_CONV_ERR;
@@ -63,7 +63,7 @@ gdm_verify_pam_conv (int num_msg, const struct pam_message **msg,
 	    /* PAM requested textual input with echo on */
 	    s = gdm_slave_greeter_ctl (GDM_PROMPT, (gchar *) msg[replies]->msg);
 	    reply[replies].resp_retcode = PAM_SUCCESS;
-	    reply[replies].resp = g_strdup (s);
+	    reply[replies].resp = strdup (s);
 	    g_free (s);
 	    break;
 	    
@@ -71,7 +71,7 @@ gdm_verify_pam_conv (int num_msg, const struct pam_message **msg,
 	    /* PAM requested textual input with echo off */
 	    s = gdm_slave_greeter_ctl (GDM_NOECHO, (gchar *) msg[replies]->msg);
 	    reply[replies].resp_retcode = PAM_SUCCESS;
-	    reply[replies].resp = g_strdup (s);
+	    reply[replies].resp = strdup (s);
 	    g_free (s);
 	    break;
 	    
@@ -85,7 +85,7 @@ gdm_verify_pam_conv (int num_msg, const struct pam_message **msg,
 	    
 	default:
 	    /* PAM has been smoking serious crack */
-	    g_free (reply);
+	    free (reply);
 	    return PAM_CONV_ERR;
 	}
 	
@@ -98,6 +98,20 @@ gdm_verify_pam_conv (int num_msg, const struct pam_message **msg,
 
 static struct pam_conv pamc = {
     &gdm_verify_pam_conv,
+    NULL
+};
+
+static gint 
+gdm_verify_standalone_pam_conv (int num_msg, const struct pam_message **msg,
+				struct pam_response **resp,
+				void *appdata_ptr)
+{
+	/* FIXME: always error out for now! */
+	return PAM_CONV_ERR;
+}
+
+static struct pam_conv standalone_pamc = {
+    &gdm_verify_standalone_pam_conv,
     NULL
 };
 
@@ -118,7 +132,7 @@ gdm_verify_user (const gchar *display)
     gint pamerr;
     gchar *login;
     gchar **pamenv;
-    
+
     /* Ask gdmgreeter for the user's login. Just for good measure */
     login = gdm_slave_greeter_ctl (GDM_PROMPT, _("Login:"));
     
@@ -191,6 +205,82 @@ gdm_verify_user (const gchar *display)
     openlog ("gdm", LOG_PID, LOG_DAEMON);
     
     return NULL;
+}
+
+/**
+ * gdm_verify_setup_user:
+ * @login: The name of the user
+ * @display: The name of the display
+ *
+ * This is used for auto loging in.  This just sets up the login
+ * session for this user
+ */
+
+void
+gdm_verify_setup_user (const gchar *login, const gchar *display) 
+{
+    gint pamerr;
+    gchar **pamenv;
+
+    if (!login)
+	return;
+
+    /* Initialize a PAM session for the user */
+    if ((pamerr = pam_start ("gdm", login, &standalone_pamc, &pamh)) != PAM_SUCCESS) {
+	gdm_error (_("Can't find /etc/pam.d/gdm!"));
+	goto setup_pamerr;
+    }
+    
+    /* Inform PAM of the user's tty */
+    if ((pamerr = pam_set_item (pamh, PAM_TTY, display)) != PAM_SUCCESS) {
+	gdm_error (_("Can't set PAM_TTY=%s"), display);
+	goto setup_pamerr;
+    }
+
+    /* If the user's password has expired, ask for a new one */
+    /* FIXME: This would require our conversation function to work */
+#if 0
+    pamerr = pam_acct_mgmt (pamh, 0);
+
+    if (pamerr == PAM_NEW_AUTHTOK_REQD)
+	pamerr = pam_chauthtok (pamh, PAM_CHANGE_EXPIRED_AUTHTOK); 
+
+    if (pamerr != PAM_SUCCESS) {
+	gdm_error (_("Couldn't set acct. mgmt for %s"), login);
+	goto setup_pamerr;
+    }
+#endif
+    
+    /* Set credentials */
+    if ((pamerr = pam_setcred (pamh, PAM_SILENT)) != PAM_SUCCESS) {
+	gdm_error (_("Couldn't set credentials for %s"), login);
+	goto setup_pamerr;
+    }
+    
+    /* Register the session */
+    if ((pamerr = pam_open_session (pamh, PAM_SILENT)) != PAM_SUCCESS) {
+	gdm_error (_("Couldn't open session for %s"), login);
+	goto setup_pamerr;
+    }
+    
+    /* Migrate any PAM env. variables to the user's environment */
+    if ((pamenv = pam_getenvlist (pamh))) {
+	gint i;
+
+	for (i = 0 ; pamenv[i] ; i++)
+	    putenv (pamenv[i]);
+    }
+    
+    return;
+    
+ setup_pamerr:
+    
+    pam_end (pamh, pamerr);
+    pamh = NULL;
+    
+    /* Workaround to avoid gdm messages being logged as PAM_pwdb */
+    closelog ();
+    openlog ("gdm", LOG_PID, LOG_DAEMON);
 }
 
 
