@@ -24,6 +24,7 @@
 gchar *gdm_verify_user    (const gchar *display);
 void   gdm_verify_cleanup (void);
 void   gdm_verify_check   (void);
+void   gdm_verify_setup_user (const gchar *login, const gchar *display) ;
 
 #endif /* GDM_VERIFY_H */
 
