@@ -1,3 +1,8 @@
+Wed Jan 10 02:32:52 2001  George Lebl <jirka@5z.com>
+
+	* daemon/verify.h, daemon/verify-*.[ch], daemon/slave.c: For
+	  autologin we have to do the pam dance to setup stuff nicely.
+
 Wed Jan 10 01:13:54 2001  George Lebl <jirka@5z.com>
 
 	* daemon/gdm.[ch], daemon/slave.c, gui/gdmlogin.c,
